--- a/liquidwar6/doc/liquidwar6.texi
+++ b/liquidwar6/doc/liquidwar6.texi
@@ -383,6 +383,8 @@ as the revision number (the version 3rd number).
 2014-01-04 : @uref{http://download.savannah.gnu.org/releases/liquidwar6/0.2.3551/,0.2.3551}, codename ``Davy Crockett''
 @item
 2014-03-26 : @uref{http://download.savannah.gnu.org/releases/liquidwar6/0.4.3681/,0.4.3681}, codename ``Hannibal''
+@item
+2014-MM-DD : @uref{http://download.savannah.gnu.org/releases/liquidwar6/0.6.XXXX/,0.6.XXXX}, codename ``Goliath''
 @end itemize
 
 @subsection Road map
