--- a/liquidwar6-extra-maps/debian/changelog
+++ b/liquidwar6-extra-maps/debian/changelog
@@ -1,6 +1,6 @@
 liquidwar6-extra-maps (0.4.3681-0vendor) unstable; urgency=medium
 
-  * Bump version
+  * Release of 0.4.3681.
 
  -- Christian Mauduit <ufoot@ufoot.org>  Wed, 26 Mar 2014 10:47:32 +0100
 
