--- a/liquidwar6/doc/liquidwar6.texi
+++ b/liquidwar6/doc/liquidwar6.texi
@@ -995,6 +995,7 @@ libfreetype6 libfreetype6-dev libsdl-ttf2.0-0 libsdl-ttf2.0-dev \
 libcaca0 caca-utils libcaca-dev \
 libcurl4-gnutls-dev \
 libgtk2.0-dev \
+xvfb \
 perl lcov global valgrind graphviz gv imagemagick \
 texinfo texlive-base texlive-generic-extra \
 texlive-fonts-recommended texlive-latex-extra \
